04-ingressroutes.yaml
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: simpleingressroute
#  namespace: default
#spec:
#  entryPoints:
#    - web
#  routes:
#  - match: Host(`prueba.peladonerd.com`) && PathPrefix(`/notls`)
#    kind: Rule
#    services:
#    - name: whoami
#      port: 80
#
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: ingressroutetls
#  namespace: default
#spec:
#  entryPoints:
#    - websecure
#  routes:
#  - match: Host(`prueba.peladonerd.com`) && PathPrefix(`/tls`)
#    kind: Rule
#    services:
#    - name: whoami
#      port: 80
#  tls:
#    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls2
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`books.ericcm.tk`)
    kind: Rule
    services:
    - name: springbooktestclient
      port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls3
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`booksa.ericcm.tk`)
    kind: Rule
    services:
    - name: serverspringbook
      port: 80
  tls:
    certResolver: default
